--- a/vercel.json
+++ b/vercel.json
@@ -3,19 +3,5 @@
     "outputDirectory": ".next",
     "framework": "nextjs",
     "installCommand": "npm install",
-    "devCommand": "npm run dev",
-    "env": {
-        "NEXT_PUBLIC_FIREBASE_API_KEY": "@firebase_api_key",
-        "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@firebase_auth_domain",
-        "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@firebase_project_id",
-        "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@firebase_storage_bucket",
-        "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@firebase_messaging_sender_id",
-        "NEXT_PUBLIC_FIREBASE_APP_ID": "@firebase_app_id",
-        "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID": "@firebase_measurement_id",
-        "RESEND_API_KEY": "@resend_api_key",
-        "PUSHINPAY_TOKEN": "@pushinpay_token",
-        "PUSHINPAY_WEBHOOK_TOKEN": "@pushinpay_webhook_token",
-        "NEXT_PUBLIC_BASE_URL": "@base_url",
-        "FIREBASE_SERVICE_ACCOUNT": "@firebase_service_account"
-    }
+    "devCommand": "npm run dev"
 }
